<resources>
    <string name="app_name">moVirt</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_camera">Scan Code</string>
    <string name="prefs_poll_events">Poll Events</string>
    <string name="prefs_poll_events_summary">If the events are part of regular poll or not.</string>
    <string name="prefs_connection_notification">Connection Notifications</string>
    <string name="prefs_connection_notification_summary">Show notifications on connection lost.</string>
    <string name="prefs_max_events_polled">Max events polled.</string>
    <string name="prefs_max_events_stored">Max events stored.</string>
    <string name="prefs_max_events_polled_summary">Maximal amount of events polled. Current: %d</string>
    <string name="prefs_max_events_stored_summary">Maximal amount of events stored. Current: %d</string>
    <string name="prefs_users_guide">User\'s Guide</string>
    <string name="prefs_about_moVirt">About moVirt</string>
    <string name="prefs_about_moVirt_summary">License, Version and Readme</string>
    <string name="prefs_connection_settings">Connection Settings</string>
    <string name="prefs_connection_settings_summary">Setup connection details (url, user, pass etc)</string>
    <string name="prefs_engines_settings">Engines\' Settings</string>
    <string name="prefs_engines_settings_summary">Add/Remove Engines. Setup their connection details and customize settings</string>
    <string name="title_activity_select_cluster">SelectClusterActivity</string>
    <string name="action_select_cluster">Select Cluster</string>
    <string name="refresh">Refresh</string>
    <string name="all_clusters">All clusters</string>
    <string name="all">All</string>
    <string name="no_vms">No VMs</string>
    <string name="needs_configuration">To use the moVirt client, you first need to setup connection parameters for your data center.\n\nDo you want to configure now?</string>
    <string name="connection_not_correct">Connection seems to be not configured properly - configure it now?</string>
    <string name="configuration">Configuration</string>
    <string name="default_username">admin@internal</string>
    <string name="default_endpoint">http://10.0.2.2:8080/ovirt-engine/api</string>
    <string name="default_api_path">/ovirt-engine/api</string>
    <string name="default_password">engine</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_edit_triggers">Triggers</string>
    <string name="title_activity_edit_accounts">Accounts</string>
    <string name="title_activity_add_account">Add Account</string>
    <string name="title_add_trigger">Add Trigger</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="edit_triggers">Triggers</string>
    <string name="create_snapshot">Create Snapshot</string>
    <string name="restore">Restore</string>
    <string name="commit">Commit</string>
    <string name="undo">Undo</string>
    <string name="preview">Preview</string>
    <string name="snapshot">Snapshot</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="connect">Connect</string>
    <string name="current">- selected</string>
    <string name="version">(v%1$s)</string>
    <string name="done_advanced_settings">Done</string>
    <string name="delete_stored_cert">Delete</string>
    <string name="load_cert_from_addr">Download</string>
    <string name="import_from_file">Import</string>
    <string name="import_issuer_from_file">Import Issuer</string>
    <string name="certificate_management">Certificate Management</string>
    <string name="account_certificate_management">%s Certificate Management</string>
    <string name="configure">Configure</string>
    <string name="trigger_scope">Editing triggers for: </string>
    <string name="add_trigger">Add Trigger</string>
    <string name="delete_trigger">Delete Trigger</string>
    <string name="ADD">ADD</string>
    <string name="DELETE">DELETE</string>
    <string name="SAVE">SAVE</string>
    <string name="whole_datacenter">Whole datacenter</string>
    <string name="engines">Engines</string>
    <string name="cluster_scope">Cluster %1$s</string>
    <string name="cancel">Cancel</string>
    <string name="trigger_condition_type">Condition</string>
    <string name="notification_type">Notification</string>
    <string name="status">When status</string>
    <string name="threshold">Threshold</string>
    <string name="regex">Regex to match</string>
    <string name="percentage_sign">%</string>
    <string name="edit_trigger">Edit Trigger</string>
    <string name="run">Run</string>
    <string name="power_off">Power Off</string>
    <string name="shutdown">Shutdown</string>
    <string name="reboot">Reboot</string>
    <string name="start_migration">Start Migration</string>
    <string name="cancel_migration">Cancel Migration</string>
    <string name="title_activity_vm_details">Vm Details</string>
    <string name="vm_scope">Vm %1$s</string>
    <string name="cpu">CPU usage:</string>
    <string name="memory">Memory usage:</string>
    <string name="memorySize">Memory size:</string>
    <string name="sockets">Sockets:</string>
    <string name="cores">Cores/Socket:</string>
    <string name="os">OS Type:</string>
    <string name="display">Display Type:</string>
    <string name="cluster_and_version">Cluster | Version:</string>
    <string name="data_center_and_version">Data Center | Version:</string>
    <string name="host">Host:</string>
    <string name="events">Events</string>
    <string name="disks">Disks</string>
    <string name="statusLabel">Status:</string>
    <string name="percentage_cannot_be_empty">You must specify the percentage value!</string>
    <string name="regex_cannot_be_empty">You must specify regex to match event message!</string>
    <string name="regex_syntax_error">Regex syntax error!</string>
    <string name="delete">Delete</string>
    <string name="vm_status_message">Status of VM \'%1$s\' is %2$s</string>
    <string name="vm_cpu_message">CPU usage of VM \'%1$s\' is over %2$d%% (%3$.1f%%)</string>
    <string name="vm_memory_message">Memory usage of VM \'%1$s\' is over %2$d%% (%3$.1f%%)</string>
    <string name="event_trigger_message">\'%1$s\' found in: %2$s</string>
    <string name="connected">Successfully connected to datacenter!</string>
    <string name="rest_request_failed">REST request failed!\n%1$s\n\nFor more details please see server error log.</string>
    <string name="rest_url_missing">%1$s: oVirt-engine is not found on %2$s.</string>
    <string name="rest_no_network">No network available.</string>
    <string name="rest_error_token_missing">Empty auth token.</string>
    <string name="rest_error_no_connection_specified">Connection details are incorrect.</string>
    <string name="rest_error_details">\nConnection details:\nAPI URL: %1$s\nUsername: %2$s\nToken: %3$s%4$s\n\nError details:\n</string>
    <string name="rest_error_detail_missing_url">url is missing!</string>
    <string name="rest_error_detail_malformed_url">url is malformed\n\t%1$s</string>
    <string name="rest_error_detail_token_missing">Token is missing!\n\tauthentication failed</string>
    <string name="rest_error_auth_failed">Authentication failed</string>
    <string name="rest_error_detail_certificate_strategy">Certificate strategy: %1$s</string>
    <string name="rest_error_detail_certificate_stored">certificate is downloaded and stored</string>
    <string name="rest_error_detail_certificate_missing">certificate is missing!</string>
    <string name="login_error_invalid_api_url">Invalid API URL: %1$s \nExample: %2$s</string>
    <string name="login_error_invalid_username">Invalid username. Use %1$s pattern.\nExample: %2$s</string>
    <string name="login_error_empty_password">Password can\'t be empty.</string>
    <string name="login_error_plus_password">note: Passwords containing \"+\" do not work until v%1$s</string>
    <string name="login_error_incorrect_ip_port">Could not connect. Make sure ip address and port are correct.</string>
    <string name="login_error_timeout">Reached timeout. Make sure ip address and port are correct. Also, check if the connection is stable.</string>
    <string name="login_error_bad_address_suffix">Not found. \nAddress suffix should be "/ovirt-engine/api"</string>
    <string name="login_error_incorrect_username_password">Username or password is incorrect.</string>
    <string name="login_error">Error logging in: %1$s</string>
    <string name="login_error_empty_token">Error: the returned token is empty. \nTry https protocol and add your certificate into %1$s.</string>
    <string name="login_error_bad_cert">Use proper certificate, or select %1$s.\nError details: %2$s</string>
    <string name="login_error_empty_fields">Fields shouldn\'t be empty.</string>
    <string name="login_error_no_account">Login failed. Account deleted.</string>
    <string name="login_error_unsupported_engine">Connected to engine v%1$s. Engines before v%2$s are not supported and may not work correctly. Try to install older version of moVirt if you encounter problems. \n\n\n See versions table at https://github.com/oVirt/moVirt/blob/master/README.md</string>
    <string name="login_success">Login successful</string>
    <string name="advanced_authenticator_error_max_visible_certs_reached">Maximum of %1$d visible certificates is supported. Showing only %1$d bottom certificates of the hierarchy.</string>
    <string name="advanced_authenticator_custom">Custom</string>
    <string name="prefs_periodic_sync">Periodic Sync</string>
    <string name="prefs_periodic_sync_summary">Enable periodic sync with custom interval instead of system\'s schedule. Enabling with short interval consumes battery!</string>
    <string name="prefs_periodic_sync_interval">Sync Interval</string>
    <string name="prefs_periodic_sync_interval_summary">Periodic sync interval in minutes. Current: %d</string>
    <string name="prefs_max_max_vms_polled">Max VMs polled</string>
    <string name="prefs_max_vms_polled_summary">Maximum amount of VMs returned from oVirt. Current: %d</string>
    <string name="prefs_vm_search_query">VMs Search Query</string>
    <string name="prefs_vm_search_query_summary">Poll only VMs which satisfy given query; e.g. name = production*</string>
    <string name="prefs_events_search_query">Events Search Query</string>
    <string name="prefs_events_search_query_summary">Poll only Events which satisfy given query; e.g. severity > warning</string>
    <string name="cert_endpoint">protocol://host:port/path/to/cert</string>
    <string name="migrate_title">Choose host to migrate VM</string>
    <string name="migrate_hint">only current cluster and working hosts shown</string>
    <string name="migrate_to_selected">Migrate to selected</string>
    <string name="migrate_to_default">Migrate to default</string>
    <string name="migrate_empty_list">No suitable hosts to migrate</string>
    <string name="domain_type">Domain Type:</string>
    <string name="storage_type">Storage Type:</string>
    <string name="format">Format:</string>
    <string name="free_space">Free Space:</string>
    <string name="total_space">Total Space:</string>
    <string name="description">Description</string>
    <string name="save_memory">Save Memory</string>
    <string name="cert_dialog_url">URL</string>
    <string name="cert_dialog_issuer_reason">Last certificate in the chain isn\'t Certificate Authority. The issuer of this certificate is required.</string>
</resources>