<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="connection_button"
        android:summary="@string/prefs_connection_settings_summary"
        android:title="@string/prefs_connection_settings" />

    <CheckBoxPreference
        android:defaultValue="@bool/defaultPollEvents"
        android:key="poll_events"
        android:persistent="true"
        android:summary="@string/prefs_poll_events_summary"
        android:title="@string/prefs_poll_events" />

    <CheckBoxPreference
        android:defaultValue="@bool/defaultConnectionNotification"
        android:key="connection_notification"
        android:persistent="true"
        android:summary="@string/prefs_connection_notification_summary"
        android:title="@string/prefs_connection_notification" />

    <CheckBoxPreference
        android:defaultValue="@bool/defaultPeriodicSync"
        android:key="periodic_sync"
        android:persistent="true"
        android:summary="@string/prefs_periodic_sync_summary"
        android:title="@string/prefs_periodic_sync" />

    <EditTextPreference
        android:defaultValue="@integer/defaultPeriodicSyncInterval"
        android:enabled="false"
        android:inputType="number"
        android:key="periodic_sync_interval"
        android:persistent="true"
        android:summary="@string/prefs_periodic_sync_interval_summary"
        android:title="@string/prefs_periodic_sync_interval" />

    <EditTextPreference
        android:defaultValue="@integer/defaultMaxEvents"
        android:inputType="number"
        android:key="max_events_stored"
        android:persistent="true"
        android:summary="@string/prefs_max_events_locally_summary"
        android:title="@string/prefs_max_events_locally" />

    <EditTextPreference
        android:defaultValue="@string/defaultEventsSearchQuery"
        android:key="events_search_query"
        android:persistent="true"
        android:summary="@string/prefs_events_search_query_summary"
        android:title="@string/prefs_events_search_query" />

    <EditTextPreference
        android:defaultValue="@integer/defaultMaxVms"
        android:inputType="number"
        android:key="max_vms_polled"
        android:persistent="true"
        android:summary="@string/prefs_max_vms_polled_summary"
        android:title="@string/prefs_max_max_vms_polled" />

    <EditTextPreference
        android:defaultValue="@string/defaultVmsSearchQuery"
        android:key="vms_search_query"
        android:persistent="true"
        android:summary="@string/prefs_vm_search_query_summary"
        android:title="@string/prefs_vm_search_query" />

    <Preference
        android:key="about_button"
        android:summary="@string/prefs_about_moVirt_summary"
        android:title="@string/prefs_about_moVirt" />

</PreferenceScreen>
