<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_run"
        android:icon="@drawable/icn_play"
        android:title="@string/run"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_stop"
        android:icon="@drawable/icn_stop"
        android:title="@string/stop"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_reboot"
        android:icon="@drawable/icn_reboot"
        android:title="@string/reboot"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_create_snapshot"
        android:title="@string/create_snapshot"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_start_migration"
        android:icon="@drawable/vm_migrating"
        android:title="@string/start_migration"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_cancel_migration"
        android:icon="@drawable/vm_migrating"
        android:title="@string/cancel_migration"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_console"
        android:icon="@drawable/icn_console"
        android:title="@string/console"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_edit_triggers"
        android:title="@string/edit_triggers"
        app:showAsAction="ifRoom|withText" />
</menu>